@@ -366,9 +366,11 @@ load_tabbedview = function(callback) {
   tabbedview.view_container.bind('reload', function() {
     //hide or show filter box
     if($('.tabbedview-tabs li a.selected.searchform-hidden').length){
-      tabbedview.searchbox.closest('.tabbedview_search').hide();
+      tabbedview.searchbox.closest('.tabbedview_search').addClass('disabledSearchBox');
+      tabbedview.searchbox.closest('.tabbedview_search input').attr('disabled', 'disabled');
     }else{
-      tabbedview.searchbox.closest('.tabbedview_search').show();
+      tabbedview.searchbox.closest('.tabbedview_search').removeClass('disabledSearchBox');
+      tabbedview.searchbox.closest('.tabbedview_search input').attr('disabled', '');
     }
 
 
