@@ -5,6 +5,9 @@ Changelog
 3.1.3 (unreleased)
 ------------------
 
+- Disable tabbedview_search instead of hiding.
+  [Julian Infanger]
+
 - Add new spinner, update spinner position and add helper functions.
   [jone]
 
